--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "schema-utils": "2.7.1"
   },
   "scripts": {
-    "dev": "webpack serve",
+    "dev": "webpack serve --mode=development",
     "build": "webpack --mode=production",
     "start": "node start.js"
   },
