--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.1.3",
   "main": "index.js",
   "types": "index.d.ts",
+  "engines": {
+    "node": ">= 13.10.0"
+  },
   "dependencies": {
     "loader-utils": "^2.0.0",
     "schema-utils": "2.7.1",
