--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webp-responsive-loader",
   "description": "converts image files to webp format and adds to the project build",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "main": "index.js",
   "types": "index.d.ts",
   "engines": {
@@ -28,7 +28,7 @@
     "testEnvironment": "node"
   },
   "author": "alimba",
-  "keywords": ["webp", "image"],
+  "keywords": ["webp", "image", "webpack"],
   "license": "MIT",
   "repository": {
     "type": "git",
